# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library
cc_library(
    name = "bls-signatures-lib",
    srcs = [
        "src/aggregationinfo.cpp",
        "src/bls.cpp",
        "src/chaincode.cpp",
        "src/extendedprivatekey.cpp",
        "src/extendedpublickey.cpp",
        "src/privatekey.cpp",
        "src/publickey.cpp",
        "src/signature.cpp",
        "contrib/relic/src/bc/relic_bc_aes.c",
        "contrib/relic/src/bc/rijndael-alg-fst.c",
        "contrib/relic/src/bc/rijndael-api-fst.c",
        "contrib/relic/src/bn/relic_bn_add.c",
        "contrib/relic/src/bn/relic_bn_cmp.c",
        "contrib/relic/src/bn/relic_bn_div.c",
        "contrib/relic/src/bn/relic_bn_factor.c",
        "contrib/relic/src/bn/relic_bn_gcd.c",
        "contrib/relic/src/bn/relic_bn_lcm.c",
        "contrib/relic/src/bn/relic_bn_mem.c",
        "contrib/relic/src/bn/relic_bn_mod.c",
        "contrib/relic/src/bn/relic_bn_mul.c",
        "contrib/relic/src/bn/relic_bn_mxp.c",
        "contrib/relic/src/bn/relic_bn_prime.c",
        "contrib/relic/src/bn/relic_bn_rec.c",
        "contrib/relic/src/bn/relic_bn_shift.c",
        "contrib/relic/src/bn/relic_bn_smb.c",
        "contrib/relic/src/bn/relic_bn_sqr.c",
        "contrib/relic/src/bn/relic_bn_srt.c",
        "contrib/relic/src/bn/relic_bn_util.c",
        "contrib/relic/src/cp/relic_cp_bbs.c",
        "contrib/relic/src/cp/relic_cp_bdpe.c",
        "contrib/relic/src/cp/relic_cp_bgn.c",
        "contrib/relic/src/cp/relic_cp_bls.c",
        "contrib/relic/src/cp/relic_cp_ecdsa.c",
        "contrib/relic/src/cp/relic_cp_ecies.c",
        "contrib/relic/src/cp/relic_cp_ecmqv.c",
        "contrib/relic/src/cp/relic_cp_ecss.c",
        "contrib/relic/src/cp/relic_cp_ibe.c",
        "contrib/relic/src/cp/relic_cp_phpe.c",
        "contrib/relic/src/cp/relic_cp_rabin.c",
        "contrib/relic/src/cp/relic_cp_rsa.c",
        "contrib/relic/src/cp/relic_cp_sokaka.c",
        "contrib/relic/src/cp/relic_cp_vbnn_ibs.c",
        "contrib/relic/src/cp/relic_cp_zss.c",
        "contrib/relic/src/dv/relic_dv_mem.c",
        "contrib/relic/src/dv/relic_dv_util.c",
        "contrib/relic/src/eb/relic_eb_add.c",
        "contrib/relic/src/eb/relic_eb_curve.c",
        "contrib/relic/src/eb/relic_eb_dbl.c",
        "contrib/relic/src/eb/relic_eb_frb.c",
        "contrib/relic/src/eb/relic_eb_hlv.c",
        "contrib/relic/src/eb/relic_eb_map.c",
        "contrib/relic/src/eb/relic_eb_mul.c",
        "contrib/relic/src/eb/relic_eb_mul_fix.c",
        "contrib/relic/src/eb/relic_eb_mul_sim.c",
        "contrib/relic/src/eb/relic_eb_neg.c",
        "contrib/relic/src/eb/relic_eb_norm.c",
        "contrib/relic/src/eb/relic_eb_param.c",
        "contrib/relic/src/eb/relic_eb_pck.c",
        "contrib/relic/src/eb/relic_eb_util.c",
        "contrib/relic/src/ed/relic_ed_add.c",
        "contrib/relic/src/ed/relic_ed_curve.c",
        "contrib/relic/src/ed/relic_ed_dbl.c",
        "contrib/relic/src/ed/relic_ed_map.c",
        "contrib/relic/src/ed/relic_ed_mul.c",
        "contrib/relic/src/ed/relic_ed_mul_fix.c",
        "contrib/relic/src/ed/relic_ed_mul_sim.c",
        "contrib/relic/src/ed/relic_ed_param.c",
        "contrib/relic/src/ed/relic_ed_pck.c",
        "contrib/relic/src/ed/relic_ed_util.c",
        "contrib/relic/src/ep/relic_ep_add.c",
        "contrib/relic/src/ep/relic_ep_curve.c",
        "contrib/relic/src/ep/relic_ep_dbl.c",
        "contrib/relic/src/ep/relic_ep_map.c",
        "contrib/relic/src/ep/relic_ep_mul.c",
        "contrib/relic/src/ep/relic_ep_mul_fix.c",
        "contrib/relic/src/ep/relic_ep_mul_sim.c",
        "contrib/relic/src/ep/relic_ep_neg.c",
        "contrib/relic/src/ep/relic_ep_norm.c",
        "contrib/relic/src/ep/relic_ep_param.c",
        "contrib/relic/src/ep/relic_ep_pck.c",
        "contrib/relic/src/ep/relic_ep_util.c",
        "contrib/relic/src/epx/relic_ep2_add.c",
        "contrib/relic/src/epx/relic_ep2_curve.c",
        "contrib/relic/src/epx/relic_ep2_dbl.c",
        "contrib/relic/src/epx/relic_ep2_frb.c",
        "contrib/relic/src/epx/relic_ep2_map.c",
        "contrib/relic/src/epx/relic_ep2_mul.c",
        "contrib/relic/src/epx/relic_ep2_mul_fix.c",
        "contrib/relic/src/epx/relic_ep2_mul_sim.c",
        "contrib/relic/src/epx/relic_ep2_neg.c",
        "contrib/relic/src/epx/relic_ep2_norm.c",
        "contrib/relic/src/epx/relic_ep2_pck.c",
        "contrib/relic/src/epx/relic_ep2_util.c",
        "contrib/relic/src/fb/relic_fb_add.c",
        "contrib/relic/src/fb/relic_fb_cmp.c",
        "contrib/relic/src/fb/relic_fb_exp.c",
        "contrib/relic/src/fb/relic_fb_inv.c",
        "contrib/relic/src/fb/relic_fb_itr.c",
        "contrib/relic/src/fb/relic_fb_mul.c",
        "contrib/relic/src/fb/relic_fb_param.c",
        "contrib/relic/src/fb/relic_fb_poly.c",
        "contrib/relic/src/fb/relic_fb_rdc.c",
        "contrib/relic/src/fb/relic_fb_shift.c",
        "contrib/relic/src/fb/relic_fb_slv.c",
        "contrib/relic/src/fb/relic_fb_sqr.c",
        "contrib/relic/src/fb/relic_fb_srt.c",
        "contrib/relic/src/fb/relic_fb_trc.c",
        "contrib/relic/src/fb/relic_fb_util.c",
        "contrib/relic/src/fbx/relic_fb2_inv.c",
        "contrib/relic/src/fbx/relic_fb2_mul.c",
        "contrib/relic/src/fbx/relic_fb2_slv.c",
        "contrib/relic/src/fbx/relic_fb2_sqr.c",
        "contrib/relic/src/fp/relic_fp_add.c",
        "contrib/relic/src/fp/relic_fp_cmp.c",
        "contrib/relic/src/fp/relic_fp_exp.c",
        "contrib/relic/src/fp/relic_fp_inv.c",
        "contrib/relic/src/fp/relic_fp_mul.c",
        "contrib/relic/src/fp/relic_fp_param.c",
        "contrib/relic/src/fp/relic_fp_prime.c",
        "contrib/relic/src/fp/relic_fp_rdc.c",
        "contrib/relic/src/fp/relic_fp_shift.c",
        "contrib/relic/src/fp/relic_fp_sqr.c",
        "contrib/relic/src/fp/relic_fp_srt.c",
        "contrib/relic/src/fp/relic_fp_util.c",
        "contrib/relic/src/fpx/relic_fp12_mul.c",
        "contrib/relic/src/fpx/relic_fp12_sqr.c",
        "contrib/relic/src/fpx/relic_fp18_mul.c",
        "contrib/relic/src/fpx/relic_fp18_sqr.c",
        "contrib/relic/src/fpx/relic_fp2_mul.c",
        "contrib/relic/src/fpx/relic_fp2_sqr.c",
        "contrib/relic/src/fpx/relic_fp3_mul.c",
        "contrib/relic/src/fpx/relic_fp3_sqr.c",
        "contrib/relic/src/fpx/relic_fp6_mul.c",
        "contrib/relic/src/fpx/relic_fp6_sqr.c",
        "contrib/relic/src/fpx/relic_fpx_add.c",
        "contrib/relic/src/fpx/relic_fpx_cmp.c",
        "contrib/relic/src/fpx/relic_fpx_exp.c",
        "contrib/relic/src/fpx/relic_fpx_frb.c",
        "contrib/relic/src/fpx/relic_fpx_inv.c",
        "contrib/relic/src/fpx/relic_fpx_pck.c",
        "contrib/relic/src/fpx/relic_fpx_rdc.c",
        "contrib/relic/src/fpx/relic_fpx_srt.c",
        "contrib/relic/src/fpx/relic_fpx_util.c",
        "contrib/relic/src/md/blake2s-ref.c",
        "contrib/relic/src/md/relic_md_blake2s.c",
        "contrib/relic/src/md/relic_md_hmac.c",
        "contrib/relic/src/md/relic_md_kdf.c",
        "contrib/relic/src/md/relic_md_mgf.c",
        "contrib/relic/src/md/relic_md_sha1.c",
        "contrib/relic/src/md/relic_md_sha256.c",
        "contrib/relic/src/md/relic_md_sha384.c",
        "contrib/relic/src/md/relic_md_sha512.c",
        "contrib/relic/src/md/sha1.c",
        "contrib/relic/src/md/sha224-256.c",
        "contrib/relic/src/md/sha384-512.c",
        "contrib/relic/src/pc/relic_pc_util.c",
        "contrib/relic/src/pp/relic_pp_add.c",
        "contrib/relic/src/pp/relic_pp_dbl.c",
        "contrib/relic/src/pp/relic_pp_exp.c",
        "contrib/relic/src/pp/relic_pp_map.c",
        "contrib/relic/src/pp/relic_pp_norm.c",
        "contrib/relic/src/rand/relic_rand_call.c",
        "contrib/relic/src/rand/relic_rand_core.c",
        "contrib/relic/src/rand/relic_rand_fips.c",
        "contrib/relic/src/rand/relic_rand_hash.c",
        "contrib/relic/src/rand/relic_rand_rdrnd.c",
        "contrib/relic/src/rand/relic_rand_udev.c",
        "contrib/relic/src/relic_bench.c",
        "contrib/relic/src/relic_conf.c",
        "contrib/relic/src/relic_core.c",
        "contrib/relic/src/relic_err.c",
        "contrib/relic/src/relic_pool.c",
        "contrib/relic/src/relic_util.c",
    ],
    hdrs = [
        "src/aggregationinfo.hpp",
        "src/bls.hpp",
        "src/chaincode.hpp",
        "src/extendedprivatekey.hpp",
        "src/extendedpublickey.hpp",
        "src/privatekey.hpp",
        "src/publickey.hpp",
        "src/signature.hpp",
        "src/util.hpp",
        "contrib/relic/src/bc/rijndael-alg-fst.h",
        "contrib/relic/src/bc/rijndael-api-fst.h",
        "contrib/relic/src/md/blake2.h",
        "contrib/relic/src/md/sha.h",
        "contrib/relic/include/relic.h",
        "contrib/relic/include/relic_arch.h",
        "contrib/relic/include/relic_bc.h",
        "contrib/relic/include/relic_bench.h",
        "contrib/relic/include/relic_bn.h",
        "contrib/relic/include/relic_conf.h",
        "contrib/relic/include/relic_core.h",
        "contrib/relic/include/relic_cp.h",
        "contrib/relic/include/relic_dv.h",
        "contrib/relic/include/relic_eb.h",
        "contrib/relic/include/relic_ec.h",
        "contrib/relic/include/relic_ed.h",
        "contrib/relic/include/relic_ep.h",
        "contrib/relic/include/relic_epx.h",
        "contrib/relic/include/relic_err.h",
        "contrib/relic/include/relic_fb.h",
        "contrib/relic/include/relic_fp.h",
        "contrib/relic/include/relic_fpx.h",
        "contrib/relic/include/relic_label.h",
        "contrib/relic/include/relic_md.h",
        "contrib/relic/include/relic_pc.h",
        "contrib/relic/include/relic_pool.h",
        "contrib/relic/include/relic_pp.h",
        "contrib/relic/include/relic_rand.h",
        "contrib/relic/include/relic_types.h",
        "contrib/relic/include/relic_util.h",
        "contrib/relic/include/low/relic_dv_low.h",
        "contrib/relic/include/low/relic_fb_low.h",
        "contrib/relic/include/low/relic_fp_low.h",
        "contrib/relic/include/low/relic_bn_low.h",
        "contrib/relic/include/low/relic_fpx_low.h",
    ],
    includes = ["include", "contrib/relic/include", "contrib/relic/include/low"],
    visibility = ["//visibility:public"],
)
